--- a/project/test/assets.html
+++ b/project/test/assets.html
@@ -33,6 +33,7 @@
 			<div class="header__bg">
 			</div>
 		</div>
+		<div class="header__bg-close"></div>
 		<div class="header-wrap">
 			<a href="#" class="logo">
 				<img 
@@ -157,22 +158,21 @@
 	</header>
 	<section class="progress mt40">
 		<div class="wrapper">
-			<h2 class="starking__title">Assets</h2>
+			<h2 class="block__title2">Assets</h2>
 			<div class="block">
 				<div class="block__title-row">
 					<h3 class="block__title">Spot</h3>
 					<span class="block__dot">•</span>
 					<p class="block__sub-title">Stocks</p>
 				</div>
-				
-				<div class="progress__table">
-					<div class="balanceRw">
-						<div class="balanceRw__left">
-							<p class="txt__min-text">Acoount balance:</p>
-							<p class="balanceRw__text">0.002314131<span> BTC = $0</span></p>
-						</div>
-						<button class="btn-ro balanceRw__btn">Deposit & Withdrawal History</button>
+				<div class="balanceRw row-hr">
+					<div class="balanceRw__left">
+						<p class="txt__min-text">Acoount balance:</p>
+						<p class="balanceRw__text">0.002314131<span> BTC = $0</span></p>
 					</div>
+					<button class="btn-ro balanceRw__btn">Deposit & Withdrawal History</button>
+				</div>
+				<div class="progress__table">
 					<table class="block__table">
 						<thead>
 							<tr>
