--- a/project/test/building.html
+++ b/project/test/building.html
@@ -33,6 +33,7 @@
 			<div class="header__bg">
 			</div>
 		</div>
+		<div class="header__bg-close"></div>
 		<div class="header-wrap">
 			<a href="#" class="logo">
 				<img 
