--- a/project/test/crypto-loans.html
+++ b/project/test/crypto-loans.html
@@ -33,6 +33,7 @@
 			<div class="header__bg">
 			</div>
 		</div>
+		<div class="header__bg-close"></div>
 		<div class="header-wrap">
 			<a href="#" class="logo">
 				<img 
@@ -157,15 +158,15 @@
 	</header>
 	<section class="progress mt40">
 		<div class="wrapper">
-			<h2 class="starking__title">Crypto loans history</h2>
+			<h2 class="block__title2">Crypto loans history</h2>
 			<div class="block">
-				<div class="progress__table noHr">
-					<div class="balanceRw balanceRw--ptn">
-						<div class="balanceRw__left">
-							<p class="txt__min-text">Acoount balance:</p>
-							<p class="balanceRw__text">0.002314131<span> BTC = $0</span></p>
-						</div>
+				<div class="balanceRw balanceRw--ptn">
+					<div class="balanceRw__left">
+						<p class="txt__min-text">Acoount balance:</p>
+						<p class="balanceRw__text">0.002314131<span> BTC = $0</span></p>
 					</div>
+				</div>
+				<div class="progress__table noHr">
 					<table class="block__table">
 						<thead>
 							<tr>
