--- a/project/test/order.html
+++ b/project/test/order.html
@@ -33,6 +33,7 @@
 			<div class="header__bg">
 			</div>
 		</div>
+		<div class="header__bg-close"></div>
 		<div class="header-wrap">
 			<a href="#" class="logo">
 				<img 
@@ -157,310 +158,309 @@
 	</header>
 	<section class="progress mt40">
 		<div class="wrapper">
-			<h2 class="starking__title">Orders</h2>
+			<h2 class="block__title2">Orders</h2>
 			<div class="block">
 				<div class="block__title-row">
 					<h3 class="block__title">Order History</h3>
 					<span class="block__dot">•</span>
 					<p class="block__sub-title">Order history</p>
 				</div>
-				
-				<div class="progress__table">
-					<div class="filter">
-						<p class="title2">Filter</p>
-						<ul class="filter__list">
-							<li class="filter__item">
-								<p class="txt__min-text">Date</p>
-								<div class="select select--date">
-									<a href="#" class="select__btns" data-value="30">
+				<div class="filter row-hr">
+					<p class="title2">Filter</p>
+					<ul class="filter__list">
+						<li class="filter__item">
+							<p class="txt__min-text">Date</p>
+							<div class="select select--date">
+								<a href="#" class="select__btns" data-value="30">
+									30 day
+								</a>
+								<ul class="select__list">
+									<li class="select__item">
+										<button 
+											class="select__btn  active" 
+											data-name="30"
+										>
 										30 day
+										</button>
+									</li>
+									<li class="select__item">
+										<button 
+											class="select__btn" 
+											data-name="14"
+										>
+											14 day	
+										</button>
+									</li>
+									<li class="select__item">
+										<button 
+											class="select__btn" 
+											data-name="7"
+										>
+											7 day	
+										</button>
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li class="filter__item">
+							<p class="txt__min-text">Pair</p>
+							<div class="select__row">
+								<div class="select select--pair">
+									<a href="#" class="select__btns" data-value="all">
+										All
 									</a>
 									<ul class="select__list">
 										<li class="select__item">
-											<button 
-												class="select__btn  active" 
-												data-name="30"
-											>
-											30 day
-											</button>
+											<input 
+												class="select__search"
+												type="text"
+												placeholder="Search"
+											/>
 										</li>
-										<li class="select__item">
-											<button 
-												class="select__btn" 
-												data-name="14"
-											>
-												14 day	
-											</button>
-										</li>
-										<li class="select__item">
-											<button 
-												class="select__btn" 
-												data-name="7"
-											>
-												7 day	
-											</button>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="filter__item">
-								<p class="txt__min-text">Pair</p>
-								<div class="select__row">
-									<div class="select select--pair">
-										<a href="#" class="select__btns" data-value="all">
-											All
-										</a>
-										<ul class="select__list">
-											<li class="select__item">
-												<input 
-													class="select__search"
-													type="text"
-													placeholder="Search"
-												/>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn active" 
-													data-name="all"
-												>
-												All
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="BTC"
-												>
-												BTC
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="ETH"
-												>
-												ETH
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="XRP"
-												>
-												XRP
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="BCH"
-												>
-												BCH
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="BTC"
-												>
-												BTC
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="ETH"
-												>
-												ETH
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="XRP"
-												>
-												XRP
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="BCH"
-												>
-												BCH
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="BTC"
-												>
-												BTC
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="ETH"
-												>
-												ETH
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="XRP"
-												>
-												XRP
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="BCH"
-												>
-												BCH
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="BTC"
-												>
-												BTC
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="ETH"
-												>
-												ETH
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="XRP"
-												>
-												XRP
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="BCH"
-												>
-												BCH
-												</button>
-											</li>
-										</ul>
-									</div>
-									<p class="select__ter"> - </p>
-									<div class="select select--pair">
-										<a href="#" class="select__btns" data-value="all">
-											All
-										</a>
-										<ul class="select__list">
-											<li class="select__item">
-												<button 
-													class="select__btn  active" 
-													data-name="all"
-												>
-												All
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="ETH"
-												>
-												ETH	
-												</button>
-											</li>
-											<li class="select__item">
-												<button 
-													class="select__btn" 
-													data-name="USDT"
-												>
-												USDT
-												</button>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</li>
-							<li class="filter__item">
-								<p class="txt__min-text">Side</p>
-								<div class="select select--side">
-									<a href="#" class="select__btns" data-value="All">
-										All sides
-									</a>
-									<ul class="select__list">
 										<li class="select__item">
 											<button 
 												class="select__btn active" 
 												data-name="all"
 											>
-											All sides
+											All
 											</button>
 										</li>
 										<li class="select__item">
 											<button 
 												class="select__btn" 
-												data-name="buy"
+												data-name="BTC"
 											>
-											Buy
+											BTC
 											</button>
 										</li>
 										<li class="select__item">
 											<button 
 												class="select__btn" 
-												data-name="sell"
+												data-name="ETH"
 											>
-											Sell	
+											ETH
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="XRP"
+											>
+											XRP
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="BCH"
+											>
+											BCH
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="BTC"
+											>
+											BTC
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="ETH"
+											>
+											ETH
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="XRP"
+											>
+											XRP
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="BCH"
+											>
+											BCH
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="BTC"
+											>
+											BTC
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="ETH"
+											>
+											ETH
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="XRP"
+											>
+											XRP
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="BCH"
+											>
+											BCH
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="BTC"
+											>
+											BTC
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="ETH"
+											>
+											ETH
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="XRP"
+											>
+											XRP
+											</button>
+										</li>
+										<li class="select__item">
+											<button 
+												class="select__btn" 
+												data-name="BCH"
+											>
+											BCH
 											</button>
 										</li>
 									</ul>
 								</div>
-							</li>
-							<li class="filter__item">
-								<p class="txt__min-text">Exchange</p>
-								<div class="select select--exchange">
-									<a href="#" class="select__btns" data-value="30">
-										Stocks
+								<p class="select__ter"> - </p>
+								<div class="select select--pair">
+									<a href="#" class="select__btns" data-value="all">
+										All
 									</a>
 									<ul class="select__list">
 										<li class="select__item">
 											<button 
-												class="select__btn active" 
-												data-name="stocks"
+												class="select__btn  active" 
+												data-name="all"
 											>
-											Stocks
+											All
 											</button>
 										</li>
 										<li class="select__item">
 											<button 
 												class="select__btn" 
-												data-name="sPot"
+												data-name="ETH"
 											>
-											SPot
+											ETH	
 											</button>
 										</li>
 										<li class="select__item">
 											<button 
 												class="select__btn" 
-												data-name="stocks"
+												data-name="USDT"
 											>
-											Stocks
+											USDT
 											</button>
 										</li>
 									</ul>
 								</div>
-							</li>
-						</ul>
-						<button class="btn-ro">Search</button>
-					</div>
+							</div>
+						</li>
+						<li class="filter__item">
+							<p class="txt__min-text">Side</p>
+							<div class="select select--side">
+								<a href="#" class="select__btns" data-value="All">
+									All sides
+								</a>
+								<ul class="select__list">
+									<li class="select__item">
+										<button 
+											class="select__btn active" 
+											data-name="all"
+										>
+										All sides
+										</button>
+									</li>
+									<li class="select__item">
+										<button 
+											class="select__btn" 
+											data-name="buy"
+										>
+										Buy
+										</button>
+									</li>
+									<li class="select__item">
+										<button 
+											class="select__btn" 
+											data-name="sell"
+										>
+										Sell	
+										</button>
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li class="filter__item">
+							<p class="txt__min-text">Exchange</p>
+							<div class="select select--exchange">
+								<a href="#" class="select__btns" data-value="30">
+									Stocks
+								</a>
+								<ul class="select__list">
+									<li class="select__item">
+										<button 
+											class="select__btn active" 
+											data-name="stocks"
+										>
+										Stocks
+										</button>
+									</li>
+									<li class="select__item">
+										<button 
+											class="select__btn" 
+											data-name="sPot"
+										>
+										SPot
+										</button>
+									</li>
+									<li class="select__item">
+										<button 
+											class="select__btn" 
+											data-name="stocks"
+										>
+										Stocks
+										</button>
+									</li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+					<button class="btn-ro">Search</button>
+				</div>
+				<div class="progress__table">
 					<table class="block__table">
 						<thead>
 							<tr>
