--- a/project/test/crypto.html
+++ b/project/test/crypto.html
@@ -32,6 +32,7 @@
 		<div class="header__bg-wrap">
 			<div class="header__bg"></div>
 		</div>
+		<div class="header__bg-close"></div>
 		</div>
 		<div class="header-wrap">
 			<a href="#" class="logo">
