--- a/project/heal/index.html
+++ b/project/heal/index.html
@@ -15,6 +15,7 @@
   <!-- <meta name="Keywords" content="HTML, META, метатег, тег, поисковая система">  -->
 
 	<meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no">
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
 	<link rel="stylesheet" href="css/styles.min.css">
 
 </head>
@@ -148,27 +149,342 @@
 			</ul>
 		</nav>
 	</header>
-	<div class="asd-row wrapper">
-		<p>Главная</p>
-		<p>Контакты</p>
-	</div>
-	<section class="twelve-sec wrapper">
-		<h2 class="h2-big">Контакты</h2>
-		<div class="twelve-sec-cot">
-			<div class="twelve-sec-cot-ss">
-				<p class="">Связаться с нами</p>
-				<p class="twelve-sec-cot-dec">Телефон</p>
-				<p class="twelve-sec-cot-norn">8 (800) 555-43-06</p>
-				<p class="twelve-sec-cot-dec">Email</p>
-				<a href="mailto:info@alkonarko24.ru" class="twelve-sec-cot-nornt colBlue">info@alkonarko24.ru</a>
-				<p class="twelve-sec-cot-dec">График работы</p>
-				<p class="twelve-sec-cot-norn">круглосуточно</p>
-				<a href="#" class="twelve-sec-cot-btn"><span class="icon"><img src="img/icon/whatsapp (43) 1.png" alt=""></span>Напишите нам в WhatsApp</a>
-				<a href="#" class="twelve-sec-cot-btn"><span class="icon"><img src="img/icon/telegram (27) 1.png" alt=""></span>Напишите нам в Telegram</a>
+	<section class="firs-sec wrapper">
+		<h2 class="firs-sec__title">
+			<span class="colBlue">Вылечим зависимость<br></span>
+			от алкоголизма и наркотиков
+			на дому и в клинике!
+		</h2>
+		<p class="firs-sec__title-sub">
+			Обратитесь за помощью в наш центр сейчас.<br>	Поможем вернуться к нормальной жизни Вам и Вашим близким!
+		</p>
+		<div class="form firs-sec__form">
+			<p class="form-text">
+				Консультация врача
+				<span class="colBlue">анонимно и бесплатно</span>
+			</p>
+			<form action="">
+				<div class="inputBox"><input type="text" placeholder="Ваше имя"></div>
+				<div class="inputBox"><input type="tel" placeholder="Ваш телефон"></div>
+				<div class="inputBox"><input type="button" value="Отправить"></div>
+				<div class="inputBox"><p>Отправляя заявку, Вы даете согласие с условиями обработки персональных данных, установленными политикой конфиденциальности</p></div>
+
+			</form>
+		</div>
+		<div class="firs-sec__right">
+			<div class="firs-sec__right-l">
+				<span class="icon"><img src="img/icon/quarter 1.png" alt=""></span>
+				<p>Улучшение состояния
+					уже <span class="colBlue">в первый час</span></p>
+			</div>
+			<div class="firs-sec__right-l">
+				<span class="icon"><img src="img/icon/location (12) 1.png" alt=""></span>
+				<p><span class="colBlue">Круглосуточный </span>выезд
+					врача в любой район</p>
 			</div>
 		</div>
 	</section>
-	<section class="footer wrapper">
+	<section class="two-sec wrapper">
+		<h2 class="h2">Наркологический центр в Москве<br>
+			профессиональная помощь специалистов</h2>
+		<div class="two-sec-r">
+			<p class="two-sec-le">
+				Основная миссия частной наркологической
+клиники в Ростове-на-Дону заключаетсяв оказании всесторонней врачебной помощи наркоманам и алкоголикам. <br><br>
+
+Мы научим зависимого обходиться без спиртного
+и наркотических препаратов, существенно меняющих личность человека.
+ Обращение за помощью
+в круглосуточную наркологическую клинику имеет
+несколько преимуществ перед государственными
+учреждениями подобного рода:
+
+			</p>
+			<ul class="two-sec-ri">
+				<li class="two-sec-it">
+					<p class="two-sec-it-name">Вывод из запоя</p>
+					<p class="two-sec-it-price">3500 <span>руб.</span></p>
+					<button class="two-sec-it-but">Заказать</button>
+				</li>
+				<li class="two-sec-it">
+					<p class="two-sec-it-name">Кодирование от алкоголизма</p>
+					<p class="two-sec-it-price">3500 <span>руб.</span></p>
+					<button class="two-sec-it-but">Заказать</button>
+				</li>
+				<li class="two-sec-it">
+					<p class="two-sec-it-name">Реабилитация алкозависимых</p>
+					<p class="two-sec-it-price">3500 <span>руб.</span></p>
+					<button class="two-sec-it-but">Заказать</button>
+				</li>
+				<li class="two-sec-it">
+					<p class="two-sec-it-name">Нарколог на дом</p>
+					<p class="two-sec-it-price">3500 <span>руб.</span></p>
+					<button class="two-sec-it-but">Заказать</button>
+				</li>
+				<li class="two-sec-it">
+					<p class="two-sec-it-name">Капельница от запоя</p>
+					<p class="two-sec-it-price">3500 <span>руб.</span></p>
+					<button class="two-sec-it-but">Заказать</button>
+				</li>
+				<li class="two-sec-it">
+					<p class="two-sec-it-name">Реабилитация наркозависимых</p>
+					<p class="two-sec-it-price">3500 <span>руб.</span></p>
+					<button class="two-sec-it-but">Заказать</button>
+				</li>
+			</ul>
+		</div>
+	</section>
+	<section class="three-sec wrapper">
+		<h2 class="h2"><span class="colBlue">Заказать услуги</span> профессионального<br>
+			врача нарколога <span class="colBlue">необходимо</span>, если имеется один<br>
+			или более симптомов</h2>
+		<div class="three-sec-a">
+			<p class="three-sec-a-i">Головокружение</p>
+			<p class="three-sec-a-i">Тошнота</p>
+			<p class="three-sec-a-i">Потеря сна</p>
+			<p class="three-sec-a-i">Потеря аппетита</p>
+			<p class="three-sec-a-i">Тахикардия</p>
+			<p class="three-sec-a-i">Рвота</p>
+			<p class="three-sec-a-i">Слабость</p>
+			<p class="three-sec-a-i">Дрожь, озноб</p>
+		</div>
+	</section>
+	<section class="four-sec wrapper">
+		<div class="four-sec-wrap">
+			<p class="four-sec-a">Позвоните прямо сейчас бесплатно<br>
+				врачу наркологу</p>
+			<p class="four-sec-b">8 (800) 333-89-65</p>
+			<div class="four-sec-c">
+				<a href="#">	<span class="icon"><img src="img/icon/phone-receiver-silhouette (3) 1.png" alt=""></span>Оставить заявку</a>
+				<p><span class="icon"><img src="img/icon/stopwatch (16) 1.png" alt=""></span>мы свяжемся с вами<br>
+					в течение 5 минут!</p>
+			</div>
+		</div>
+	</section>
+	<section class="five-sec wrapper">
+		<h2 class="h2">Почему стоит обратиться к нам?</h2>
+		<ul class="five-sec-ul">
+			<li class="five-sec-li">
+				<span class="icon"><img src="img/icon/lines/antivirus (1) 1.png" alt=""></span>
+				<p>Гарантируем на 100% результат после лечения!</p>
+			</li>
+			<li class="five-sec-li">
+				<span class="icon"><img src="img/icon/lines/incognito 1.png" alt=""></span>
+				<p>Никто не узнает, 
+					кто мы
+					и зачем приходили</p>
+			</li>
+			<li class="five-sec-li">
+				<span class="icon"><img src="img/icon/lines/heartbeat 1.png" alt=""></span>
+				<p>Проведем диагностику
+					для исключения нежелательной реакции</p>
+			</li>
+			<li class="five-sec-li">
+				<span class="icon"><img src="img/icon/lines/medicines 1.png" alt=""></span>
+				<p>Используем только
+					качественные и проверенные препараты!</p>
+			</li>
+		</ul>
+	</section>
+	<section class="six-sec wrapper">
+		<h2 class="h2">Квалифицированную помощь окажут</h2>
+		<div class="six-sec-slider">
+			<div class="six-sec-slider-item">
+				<div class="six-sec-item">
+					<div class="six-sec-img"><img src="img/content/slide/Rectangle 16.png" alt=""></div>
+					<p class="six-sec-name">Шелег Антон<br> Александрович</p>
+					<p class="six-sec-desc">Врач психиатр-нарколог. <br>
+						Стаж работы 12 лет.</p>
+				</div>
+			</div>
+			<div class="six-sec-slider-item">
+				<div class="six-sec-item">
+					<div class="six-sec-img"><img src="img/content/slide/Rectangle 17.png" alt=""></div>
+					<p class="six-sec-name">Михайлов<br> Виктор Викторович</p>
+					<p class="six-sec-desc">Врач психиатр-нарколог. <br>
+						Стаж работы 12 лет.</p>
+				</div>
+			</div>
+			<div class="six-sec-slider-item">
+				<div class="six-sec-item">
+					<div class="six-sec-img"><img src="img/content/slide/Group 132.png" alt=""></div>
+					<p class="six-sec-name">Шелег Антон<br> Александрович</p>
+					<p class="six-sec-desc">Врач психиатр-нарколог. <br>
+						Стаж работы 12 лет.</p>
+				</div>
+			</div>
+			<div class="six-sec-slider-item">
+				<div class="six-sec-item">
+					<div class="six-sec-img"><img src="img/content/slide/Group 134.png" alt=""></div>
+					<p class="six-sec-name">Шелег Антон<br> Александрович</p>
+					<p class="six-sec-desc">Врач психиатр-нарколог. <br>
+						Стаж работы 12 лет.</p>
+				</div>
+			</div>
+			<div class="six-sec-slider-item">
+				<div class="six-sec-item">
+					<div class="six-sec-img"><img src="img/content/slide/Rectangle 16.png" alt=""></div>
+					<p class="six-sec-name">Шелег Антон<br> Александрович</p>
+					<p class="six-sec-desc">Врач психиатр-нарколог. <br>
+						Стаж работы 12 лет.</p>
+				</div>
+			</div>
+		</div>
+	</section>	
+	<section class="sev-sec wrapper">
+		<h2 class="h2">Вопросы и ответы</h2>
+		<div class="sev-sec-block">
+			<ul class="sev-sec-fqa">
+				<li class="sev-sec-fqa-i">
+					<p>Я пью пиво 4-5 раз в неделю, иногда чаще, работе и жизни это не мешает. <br>
+						Есть ли у меня проблемы с алкоголем?</p>
+					<span>	&#x002B;</span>
+				</li>
+				<li class="sev-sec-fqa-i-s">
+					<p>Процедура вывода из запоя в Новосибирске анонимная? 
+						Не хочу, чтобы кто-то знал о проблеме</p>
+				</li>
+				<li class="sev-sec-fqa-i">
+					<p>Процедура вывода из запоя в Новосибирске анонимная?  <br>
+						Не хочу, чтобы кто-то знал о проблеме</p>
+					<span>	&#x002B;</span>
+				</li>
+				<li class="sev-sec-fqa-i-s">
+					<p>Процедура вывода из запоя в Новосибирске анонимная? 
+						Не хочу, чтобы кто-то знал о проблеме</p>
+				</li>
+				<li class="sev-sec-fqa-i">
+					<p>Где находится ваша клиника?</p>
+					<span>	&#x002B;</span>
+				</li>
+				<li class="sev-sec-fqa-i-s">
+					<p>Процедура вывода из запоя в Новосибирске анонимная? 
+						Не хочу, чтобы кто-то знал о проблеме</p>
+				</li>
+				<li class="sev-sec-fqa-i">
+					<p>Сколько стоят ваши услуги? Какой недорогой комплекс по выводу из запоя лучше заказать?</p>
+					<span>	&#x002B;</span>
+				</li>
+				<li class="sev-sec-fqa-i-s">
+					<p>Процедура вывода из запоя в Новосибирске анонимная? 
+						Не хочу, чтобы кто-то знал о проблеме</p>
+				</li>
+				<li class="sev-sec-fqa-i">
+					<p>Какой состав капельницы от запоя будет вводиться больному? Какие препараты используете?</p>
+					<span>	&#x002B;</span>
+				</li>
+				<li class="sev-sec-fqa-i-s">
+					<p>Процедура вывода из запоя в Новосибирске анонимная? 
+						Не хочу, чтобы кто-то знал о проблеме</p>
+				</li>
+				<li class="sev-sec-fqa-i">
+					<p>Какой состав капельницы от запоя будет вводиться больному? Какие препараты используете?</p>
+					<span>	&#x002B;</span>
+				</li>
+				<li class="sev-sec-fqa-i-s">
+					<p>Процедура вывода из запоя в Новосибирске анонимная? 
+						Не хочу, чтобы кто-то знал о проблеме</p>
+				</li>
+				<li class="sev-sec-fqa-i">
+					<p>Что делать, если состояние пациента ухудшится?</p>
+					<span>	&#x002B;</span>
+				</li>
+				<li class="sev-sec-fqa-i-s">
+					<p>Процедура вывода из запоя в Новосибирске анонимная? 
+						Не хочу, чтобы кто-то знал о проблеме</p>
+				</li>
+				<li class="sev-sec-fqa-i">
+					<p>Возможно ли проведение процедуры в домашних условиях? Это безопасно?</p>
+					<span>	&#x002B;</span>
+				</li>
+				<li class="sev-sec-fqa-i-s">
+					<p>Процедура вывода из запоя в Новосибирске анонимная? 
+						Не хочу, чтобы кто-то знал о проблеме</p>
+				</li>
+				<li class="sev-sec-fqa-i">
+					<p>Пациент тяжелый, может быть лучше поехать в стационар?</p>
+					<span>	&#x002B;</span>
+				</li>
+				<li class="sev-sec-fqa-i-s">
+					<p>Процедура вывода из запоя в Новосибирске анонимная? 
+						Не хочу, чтобы кто-то знал о проблеме</p>
+				</li>
+			</ul>
+			<div class="form firs-sec__form sev-sec-wa">
+				<p class="form-text">
+					Остались вопросы?
+				</p>
+				<form action="">
+					<div class="inputBox"><input type="text" placeholder="Ваше имя"></div>
+					<div class="inputBox"><input type="tel" placeholder="Ваш телефон"></div>
+					<div class="inputBox">
+						<textarea name="" id="" cols="30" rows="3" placeholder="Ваш вопрос"></textarea>
+					</div>
+					<div class="inputBox"><input type="button" value="Отправить"></div>
+					<div class="inputBox"><p>Отправляя заявку, Вы даете согласие с условиями обработки персональных данных, установленными политикой конфиденциальности</p></div>
+	
+				</form>
+			</div>
+		</div>
+	</section>
+	<section class="eight-sec wrapper">
+		<h2 class="h2">Что говорят пациенты</h2>
+		<div class="eight-sec-slider">
+			<div class="eight-sec-slider-it">
+				<div class="eight-sec-it">
+					<p class="eight-sec-it-p">Я пью довольно, редко - но как говорят - метко.<br>
+						И тогда без вызова нарколога из вашей клиники на дом не обходится, похмельный синдром переношу тяжело. Врач приезжает в течение получаса после вызова, сразу же все понимает, быстро снимает проявление похмелья, облегчает состояние. Пару часов поспишь после его отъезда и снова человек. Главное - анонимность, соседи не в курсе моих неприятностей. </p>
+					<div class="eight-sec-it-line">
+						<div class="eight-sec-it-l">
+							<p class="eight-sec-it-name">Александр Ильич, 36 лет</p>
+							<p class="eight-sec-it-city">Москва</p>
+						</div>
+						<span class="icon"><img src="img/icon/“.png" alt=""></span>
+					</div>
+				</div>
+			</div>
+			<div class="eight-sec-slider-it">
+				<div class="eight-sec-it">
+					<p class="eight-sec-it-p">Я пью довольно, редко - но как говорят - метко.<br>
+						И тогда без вызова нарколога из вашей клиники на дом не обходится, похмельный синдром переношу тяжело. Врач приезжает в течение получаса после вызова, сразу же все понимает, быстро снимает проявление похмелья, облегчает состояние. </p>
+					<div class="eight-sec-it-line">
+						<div class="eight-sec-it-l">
+							<p class="eight-sec-it-name">Александр Ильич, 36 лет</p>
+							<p class="eight-sec-it-city">Москва</p>
+						</div>
+						<span class="icon"><img src="img/icon/“.png" alt=""></span>
+					</div>
+				</div>
+			</div>
+			<div class="eight-sec-slider-it">
+				<div class="eight-sec-it">
+					<p class="eight-sec-it-p">Я пью довольно, редко - но как говорят - метко.<br>
+						И тогда без вызова нарколога из вашей клиники на дом не обходится, похмельный синдром переношу тяжело. Врач приезжает в течение получаса после вызова, сразу же все понимает, быстро снимает проявление похмелья, облегчает состояние. Пару часов поспишь после его отъезда и снова человек. Главное - анонимность, соседи не в курсе моих неприятностей. </p>
+					<div class="eight-sec-it-line">
+						<div class="eight-sec-it-l">
+							<p class="eight-sec-it-name">Александр Ильич, 36 лет</p>
+							<p class="eight-sec-it-city">Москва</p>
+						</div>
+						<span class="icon"><img src="img/icon/“.png" alt=""></span>
+					</div>
+				</div>
+			</div>
+			<div class="eight-sec-slider-it">
+				<div class="eight-sec-it">
+					<p class="eight-sec-it-p">Я пью довольно, редко - но как говорят - метко.<br>
+						И тогда без вызова нарколога из вашей клиники на дом не обходится, похмельный синдром переношу тяжело. Врач приезжает в течение получаса после вызова, сразу же все понимает, быстро снимает проявление похмелья, облегчает состояние. </p>
+					<div class="eight-sec-it-line">
+						<div class="eight-sec-it-l">
+							<p class="eight-sec-it-name">Александр Ильич, 36 лет</p>
+							<p class="eight-sec-it-city">Москва</p>
+						</div>
+						<span class="icon"><img src="img/icon/“.png" alt=""></span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<div class="footer wrapper">
 		<div class="footer-top">
 			<div class="footer-rig">
 				<p class="footer-rig-a">Позвоните нам</p>
@@ -189,8 +505,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
+	
 	<footer class="footer-botton">
+		
 		<nav class="nav-bar">
 			<ul class="nav-bar__ul">
 				<li class="dropdown">
@@ -238,7 +556,9 @@
 			<a href="tel:89612910303" class="header-top__l6"><span class="icon"><img src="img/icon/htel.png" alt=""></span> Вызвать врача</a>
 		</div>
 	</footer>
-
+	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> -->
+	
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script type="text/javascript" src="js/scripts.min.js"></script>
