--- a/project/heal/index4.html
+++ b/project/heal/index4.html
@@ -563,6 +563,21 @@
 		</div>
 	</footer>
 
+	<div class="ollPagas">
+		<p class="ollPagas__text">Список страниц<br>Для просмотри верски</p>
+		<ul class="ollPagas__list">
+			<li class="ollPagas__item"><a href="./index.html" class="ollPagas__link">Лечение алкоголя и нарко</a></li>
+			<li class="ollPagas__item"><a href="./index2.html" class="ollPagas__link">О клинике</a></li>
+			<li class="ollPagas__item"><a href="./index3.html" class="ollPagas__link">Услуги</a></li>
+			<li class="ollPagas__item"><a href="./index4.html" class="ollPagas__link">Вывод из запоя</a></li>
+			<li class="ollPagas__item"><a href="./index5.html" class="ollPagas__link">Сертификаты</a></li>
+			<li class="ollPagas__item"><a href="./index6.html" class="ollPagas__link">Гарантии</a></li>
+			<li class="ollPagas__item"><a href="./index7.html" class="ollPagas__link">Врачи</a></li>
+			<li class="ollPagas__item"><a href="./index8.html" class="ollPagas__link">Цены</a></li>
+			<li class="ollPagas__item"><a href="./index9.html" class="ollPagas__link">Отзывы</a></li>
+			<li class="ollPagas__item"><a href="./index10.html" class="ollPagas__link">Контакты</a></li>
+		</ul>
+	</div>
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script type="text/javascript" src="js/scripts.min.js"></script>
