--- a/project/heal/index8.html
+++ b/project/heal/index8.html
@@ -312,7 +312,7 @@
 	</footer>
 
 	<div class="ollPagas">
-		<p class="ollPagas__text">Список страниц<br>Для просмотри верски</p>
+		<p class="ollPagas__text">Список страниц<br><span>Для просмотри верски</span></p>
 		<ul class="ollPagas__list">
 			<li class="ollPagas__item"><a href="./index.html" class="ollPagas__link">Лечение алкоголя и нарко</a></li>
 			<li class="ollPagas__item"><a href="./index2.html" class="ollPagas__link">О клинике</a></li>
