--- a/project/bitlook/bal-det.html
+++ b/project/bitlook/bal-det.html
@@ -812,10 +812,9 @@
 			<li class="ollPagas__item"><a href="./crypto.html" class="ollPagas__link">crypto</a></li>
 			<li class="ollPagas__item"><a href="./crypto-acc.html" class="ollPagas__link">crypto-acc</a></li>
 			<li class="ollPagas__item"><a href="./crypto-loans.html" class="ollPagas__link">crypto-loans</a></li>
+			<li class="ollPagas__item"><a href="./space.html" class="ollPagas__link">space</a></li>
 			<li class="ollPagas__item"><a href="./index.html" class="ollPagas__link">Head</a></li>
-			<li class="ollPagas__item"><a href="./main.html" class="ollPagas__link">main</a></li>
 			<li class="ollPagas__item"><a href="./main-acc.html" class="ollPagas__link">main-acc</a></li>
-			<li class="ollPagas__item"><a href="./navigation.html" class="ollPagas__link">navigation</a></li>
 			<li class="ollPagas__item"><a href="./openOrdersNoData.html" class="ollPagas__link">openOrdersNoData</a></li>
 			<li class="ollPagas__item"><a href="./order.html" class="ollPagas__link">order</a></li>
 			<li class="ollPagas__item"><a href="./order-filt.html" class="ollPagas__link">order-filt</a></li>
