--- a/project/test/index.html
+++ b/project/test/index.html
@@ -10,7 +10,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>Title</title>
+	<title>IP IZIPAQ</title>
 
 	<!-- Иконка для сайта
 	<link rel="icon" type="image/png" sizes="48x48" href="./img/favicon/icon-48.png">
@@ -29,6 +29,12 @@
 <body class="mainSt">
 	<header class="header">
 		<div class="wrapper header__wrap">
+			<button class="header__btn">
+				<div class="header__btnBlock">
+					<span></span><span></span><span></span>
+				</div>
+			</button>
+			<div class="header__logo logo-row"><img src="./img/icon/logo.png" alt="izi paq"></div>
 			<ul class="header__list">
 				<li class="header__item"><a href="/" class="header__link active">Главная</a></li>
 				<li class="header__item"><a href="#" class="header__link">О платформе</a></li>
@@ -38,8 +44,8 @@
 				<li class="header__item"><a href="#" class="header__link">О нас </a></li>
 				<li class="header__item"><a href="#" class="header__link">Контакты </a></li>
 				<li class="header__item"><a href="#" class="header__link">Калькулятор </a></li>
-				<li class="header__item"><a href="#" class="header__link header__link--ln">RU</a></li>
-				<li class="header__item"><a href="#" class="header__link">+7 (7172) 72-92-25</a></li>
+				<li class="header__item header__item--ln"><a href="#" class="header__link active">RU</a><a href="#" class="header__link">EN</a></li>
+				<li class="header__item header__item--tel"><a href="#" class="header__link">+7 (7172) 72-92-25</a></li>
 			</ul>
 		</div>
 	</header>
