--- a/project/test/about.html
+++ b/project/test/about.html
@@ -38,8 +38,8 @@
 			<div class="header__logo logo-row"><img src="./img/icon/logo.png" alt="izi paq"></div>
 			<ul class="header__list">
 				<li class="header__item"><a href="/" class="header__link">Главная</a></li>
-				<li class="header__item"><a href="#" class="header__link active">О платформе</a></li>
-				<li class="header__item"><a href="#" class="header__link">Продукты и услуги</a></li>
+				<li class="header__item"><a href="/about.html" class="header__link active">О платформе</a></li>
+				<li class="header__item"><a href="/service.html" class="header__link">Продукты и услуги</a></li>
 				<li class="header__item"><a href="#" class="header__link">Вакансии</a></li>
 				<li class="header__item"><a href="#" class="header__link">Модель сотрудничества</a></li>
 				<li class="header__item"><a href="#" class="header__link">О нас </a></li>
@@ -84,7 +84,7 @@
 		<div class="wrapper howWork__wrap">
 			<h5 class="blockTitle">Как это работает</h5>
 			<div class="howWork__swiper">
-				<div class="swiper ">
+				<div class="swiper howWork__slider">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide howWork__slide">
 							<div class="howWork__left">
@@ -326,18 +326,18 @@
 				</a>
 			</li>
 			<li class="footer__item">
-				<a href="77172729225">
+				<a href="tel:+77172729225">
 					+7 (7172) 72-92-25
-					Ежедневно с 9 до 21:00
 				</a>
+				Ежедневно с 9 до 21:00
 			</li>
 			<li class="footer__item">
 				<a href="mailto:info@izipaq.kz">
 					INFO@IZIPAQ.KZ
-					Написать письмо
-					Оферта 1С-Битрикс Лицензия
-					Оферта оказание услуг
 				</a>
+				Написать письмо
+				Оферта 1С-Битрикс Лицензия
+				Оферта оказание услуг
 			</li>
 		</ul>
 		<div class="footer__social">
