--- a/project/test/index.html
+++ b/project/test/index.html
@@ -37,8 +37,8 @@
 			<div class="header__logo logo-row"><img src="./img/icon/logo.png" alt="izi paq"></div>
 			<ul class="header__list">
 				<li class="header__item"><a href="/" class="header__link active">Главная</a></li>
-				<li class="header__item"><a href="#" class="header__link">О платформе</a></li>
-				<li class="header__item"><a href="#" class="header__link">Продукты и услуги</a></li>
+				<li class="header__item"><a href="/about.html" class="header__link">О платформе</a></li>
+				<li class="header__item"><a href="/service.html" class="header__link">Продукты и услуги</a></li>
 				<li class="header__item"><a href="#" class="header__link">Вакансии</a></li>
 				<li class="header__item"><a href="#" class="header__link">Модель сотрудничества</a></li>
 				<li class="header__item"><a href="#" class="header__link">О нас </a></li>
@@ -156,18 +156,18 @@
 				</a>
 			</li>
 			<li class="footer__item">
-				<a href="77172729225">
+				<a href="tel:+77172729225">
 					+7 (7172) 72-92-25
-					Ежедневно с 9 до 21:00
 				</a>
+				Ежедневно с 9 до 21:00
 			</li>
 			<li class="footer__item">
 				<a href="mailto:info@izipaq.kz">
 					INFO@IZIPAQ.KZ
-					Написать письмо
-					Оферта 1С-Битрикс Лицензия
-					Оферта оказание услуг
 				</a>
+				Написать письмо
+				Оферта 1С-Битрикс Лицензия
+				Оферта оказание услуг
 			</li>
 		</ul>
 		<div class="footer__social">
