--- a/project/test/about.html
+++ b/project/test/about.html
@@ -316,7 +316,7 @@
 		<ul class="footer__list wrapper">
 			<li class="footer__item">
 				<a href="#">
-					© 2006-2021, IZIPAQ
+					© 2006-2021, IZIPAQ<br>
 					Положение о защите персональных данных
 				</a>
 			</li>
@@ -334,9 +334,9 @@
 			<li class="footer__item">
 				<a href="mailto:info@izipaq.kz">
 					INFO@IZIPAQ.KZ
-				</a>
-				Написать письмо
-				Оферта 1С-Битрикс Лицензия
+				</a><br>
+				Написать письмо<br>
+				Оферта 1С-Битрикс Лицензия<br>
 				Оферта оказание услуг
 			</li>
 		</ul>
