--- a/project/test/service.html
+++ b/project/test/service.html
@@ -168,7 +168,7 @@
 			<div class="servSel__wrapTabs wrapper">
 				<h5 class="blockTitle">Функциональные возможности: </h5>
 				<div class="servSel__wrapTab active" data-page="tabPage1">
-					<div class="servSel__block">
+					<div class="servSel__block" id="hidder3">
 						<ul class="servSel__reasons">
 							<li class="servSel__reason">
 								<p class="servSel__num">01</p>
@@ -212,10 +212,11 @@
 								<p class="servSel__desc txt">Автоматическое уведомление заинтересованных сторон о ходе согласования документов и исполнения задач.</p>
 							</li>
 						</ul>
+						<button class="btn btn--dark"><span class="hide">Скрыть</span><span class="show">Читать полностью</span></button>
 					</div>
 				</div>
 				<div class="servSel__wrapTab" data-page="tabPage2">
-					<div class="servSel__block">
+					<div class="servSel__block" id="hidder2">
 						<ul class="servSel__reasons">
 							<li class="servSel__reason">
 								<p class="servSel__num">01</p>
@@ -258,6 +259,7 @@
 								<p class="servSel__desc txt">Формирование табеля учета рабочего времени и последовательное автоматическое формирование годового табеля учета рабочего времени.</p>
 							</li>
 						</ul>
+						<button class="btn btn--dark"><span class="hide">Скрыть</span><span class="show">Читать полностью</span></button>
 					</div>
 				</div>
 				<div class="servSel__wrapTab" data-page="tabPage3">
@@ -422,7 +424,7 @@
 		<ul class="footer__list wrapper">
 			<li class="footer__item">
 				<a href="#">
-					© 2006-2021, IZIPAQ
+					© 2006-2021, IZIPAQ<br>
 					Положение о защите персональных данных
 				</a>
 			</li>
@@ -440,9 +442,9 @@
 			<li class="footer__item">
 				<a href="mailto:info@izipaq.kz">
 					INFO@IZIPAQ.KZ
-				</a>
-				Написать письмо
-				Оферта 1С-Битрикс Лицензия
+				</a><br>
+				Написать письмо<br>
+				Оферта 1С-Битрикс Лицензия<br>
 				Оферта оказание услуг
 			</li>
 		</ul>
