--- a/project/test/index.html
+++ b/project/test/index.html
@@ -36,9 +36,9 @@
 			</button>
 			<div class="header__logo logo-row"><img src="./img/icon/logo.png" alt="izi paq"></div>
 			<ul class="header__list">
-				<li class="header__item"><a href="/" class="header__link active">Главная</a></li>
-				<li class="header__item"><a href="/about.html" class="header__link">О платформе</a></li>
-				<li class="header__item"><a href="/service.html" class="header__link">Продукты и услуги</a></li>
+				<li class="header__item"><a href="./" class="header__link active">Главная</a></li>
+				<li class="header__item"><a href="./about.html" class="header__link">О платформе</a></li>
+				<li class="header__item"><a href="./service.html" class="header__link">Продукты и услуги</a></li>
 				<li class="header__item"><a href="#" class="header__link">Вакансии</a></li>
 				<li class="header__item"><a href="#" class="header__link">Модель сотрудничества</a></li>
 				<li class="header__item"><a href="#" class="header__link">О нас </a></li>
