--- a/cry/index.html
+++ b/cry/index.html
@@ -11,7 +11,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<meta name="description" content="Выводимое описании при выводе в поисковике вашего сайта"> 
+	<meta name="description" content="Выводимое описании при выводе в поисковике вашего сайта">
+	<link rel="stylesheet" href="./build/main.css">
 </head>
 
 <body>
