--- a/project/bitlook/terms.html
+++ b/project/bitlook/terms.html
@@ -361,7 +361,7 @@
 		</div>
 	</footer>
 	<div class="ollPagas">
-		<p class="ollPagas__text">Список страниц<br><span>Для просмотри верски</span></p>
+		<p class="ollPagas__text">Page List<br><span>To view page</span></p>
 		<ul class="ollPagas__list">
 			<li class="ollPagas__item"><a href="./assets.html" class="ollPagas__link">assets</a></li>
 			<li class="ollPagas__item"><a href="./assets2.html" class="ollPagas__link">assets2</a></li>
