--- a/cry/index.html
+++ b/cry/index.html
@@ -1,22 +1,1 @@
-<!-- 
-  Was made by Pagas15
-  My site - https://pagas15.github.io
--->
-
-
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<meta name="description" content="Выводимое описании при выводе в поисковике вашего сайта">
-	<link rel="stylesheet" href="./build/main.css">
-</head>
-
-<body>
-	<div class="app">App will be here..</div>
-	<script type="text/javascript" src="build/main.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>React App</title><script defer="defer" src="/static/js/main.6d774cf5.js"></script><link href="/static/css/main.a2c43992.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
