--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
 <body>
 	<!-- Header -->
 	
-	<div class="louder">
+	<div class="louder active" id="louder">
 		<div class="louder__anim">
 			<div class="louder__vip"><img src="./img/preloading/logo.png" alt=""></div>
 			<div class="louder__cirkle">
